fixing grid spacing and adding row-cols for dynamic grid

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -387,6 +387,10 @@ img {
         }
     }
 
+    .card{
+        margin-top: 20px;
+    }
+
     .lessons{
         height: 900px;
         overflow-y: scroll;
